--- a/hw18-css/home.css
+++ b/hw18-css/home.css
@@ -141,13 +141,8 @@ footer{
     color: white;
     min-height: 50px;
     position: absolute;
-    bottom: 0;
-
-
-
-
-     
-    
+    bottom: 0;    
+    width: 100%;  
 }
 p{
     vertical-align: center;
