--- a/hw18-css/skills.css
+++ b/hw18-css/skills.css
@@ -1,7 +1,7 @@
 /*background----------------------------------*/
 body{
     background: url(../hw18-images/fogtree1.jpg);
-    height: 100%;
+    min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -16,6 +16,8 @@ body{
     
 }
 h1{
+    display: flex;
+    text-align: center;
     font-family: itc-benguiat, serif;
     font-weight: 700;
     font-style: normal;
@@ -79,6 +81,7 @@ nav{
     padding: 0px 20px;
     color: #213130;
     
+
 }
 .nav-links li a{
     transition:all 0.3 ease 0s;
@@ -93,7 +96,53 @@ ul{
     text-decoration: none;
 }
 
+header a{
+    color: #213130
+}
+
+header a:hover{
+    color: #C82121;
+}
+
 /*section----------------------------------*/
+
+.title-skills{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+/*card-------------------------------------*/
+
+.card{
+    display: flex;
+    
+}
+
+.card-image{
+    width: 40%;
+}
+
+.card-body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #C82121 ;
+    width: 60%;
+    padding: 48px;
+    
+}
+.card-body h3{
+    margin-top: 0;
+    margin-bottom: .125em;
+}
+.card-body h3{
+    display: flex;
+    flex-direction: row;
+
+}
 
 
 
@@ -111,22 +160,53 @@ footer{
     width: 100%;  
 }
 
+footer p{
+    display: grid;
+    place-items: center;
+    font-family: itc-benguiat, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+    text-transform: uppercase;
+}
+
+
+.email{
+    display: grid;
+    place-items: center;
+    font-family: futura-pt, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+
+}
+.fa{
+    padding: 10px;
+    font-size: 30px;
+    text-align: center;
+    text-decoration: none;
+}
+.fa:hover{
+    opacity: .7;
+    color: #213130;
+
+}
+.fa-linkedin{
+    background-color: #C82121;
+    color: white;
+}
 .copyright{
-    display: flex;
-    justify-content: center; 
+    display: grid;
+    place-items: center;
     font-family: futura-pt, sans-serif;
     font-weight: 400;
     font-style: normal;
     text-transform: uppercase;
     font-size: 12px;
 }
-
-.email{
-    display: flex;
-    vertical-align: middle;
-    font-family: futura-pt, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 18px;
-
+footer a{
+    color: white
+}
+footer a:hover{
+    color: #213130;
 }
