--- a/hw18-css/works.css
+++ b/hw18-css/works.css
@@ -1,7 +1,7 @@
 /*background----------------------------------*/
 body{
     background: url(../hw18-images/fogtree1.jpg);
-    height: 100%;
+    min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -16,6 +16,8 @@ body{
     
 }
 h1{
+    display: flex;
+    text-align: center;
     font-family: itc-benguiat, serif;
     font-weight: 700;
     font-style: normal;
@@ -78,7 +80,8 @@ nav{
 .nav-links li{
     display: inline-block;
     padding: 0px 20px;
-    color: #213130;   
+    color: #213130;
+    
 
 }
 .nav-links li a{
@@ -94,9 +97,22 @@ ul{
     text-decoration: none;
 }
 
+header a{
+    color: #213130
+}
+
+header a:hover{
+    color: #C82121;
+}
+
 
 /*section----------------------------------*/
 
+.title-works{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
 
 
 /*footer-----------------------------------*/
@@ -113,22 +129,59 @@ footer{
     width: 100%;  
 }
 
+footer p{
+    display: grid;
+    place-items: center;
+    font-family: itc-benguiat, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+    text-transform: uppercase;
+}
+
+
+.email{
+    display: grid;
+    place-items: center;
+    font-family: futura-pt, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+
+}
+.fa{
+    padding: 10px;
+    font-size: 30px;
+    text-align: center;
+    text-decoration: none;
+}
+.fa:hover{
+    opacity: .7;
+    color: #213130;
+
+}
+.fa-linkedin{
+    background-color: #C82121;
+    color: white;
+}
 .copyright{
-    display: flex;
-    justify-content: center; 
+    display: grid;
+    place-items: center;
     font-family: futura-pt, sans-serif;
     font-weight: 400;
     font-style: normal;
     text-transform: uppercase;
     font-size: 12px;
 }
+footer a{
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    gap: 4px;
+    grid-auto-flow: column;
+    color: white;
 
-.email{
-    display: flex;
-    vertical-align: middle;
-    font-family: futura-pt, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 18px;
-
+}
+footer a:hover{
+    color: #213130;
 }
