--- a/hw18-css/index.css
+++ b/hw18-css/index.css
@@ -42,7 +42,7 @@ h2{
 
 body{
     background: url(../hw18-images/fog-tree1.jpg);
-    min-height: 100vh;
+    min-height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
