--- a/hw18-css/skills.css
+++ b/hw18-css/skills.css
@@ -1,4 +1,4 @@
-/*background----------------------------------*/
+/*body----------------------------------*/
 body{
     background: url(../hw18-images/fogtree1.jpg);
     min-height: 100vh;
@@ -6,7 +6,10 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
-
+#container{
+    position: relative;
+    min-height: 100%;
+}
 /*text----------------------------------*/
 
 *{
@@ -118,6 +121,7 @@ header a:hover{
 
 .card{
     display: flex;
+    flex-direction: column;
     
 }
 
@@ -158,6 +162,7 @@ footer{
     position: absolute;
     bottom: 0;    
     width: 100%;  
+    position: fixed;
 }
 
 footer p{
