--- a/hw18-css/works.css
+++ b/hw18-css/works.css
@@ -1,11 +1,13 @@
-/*background----------------------------------*/
+
+/*body----------------------------------*/
 body{
     background: url(../hw18-images/fogtree1.jpg);
-    min-height: 100vh;
+    min-height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 
 /*text----------------------------------*/
 
@@ -15,6 +17,7 @@ body{
     padding: 0;
     
 }
+
 h1{
     display: flex;
     text-align: center;
@@ -25,6 +28,45 @@ h1{
     font-size: 320px;
     height: 211px;
     color: #C82121;
+}
+@media (min-width:320px){
+    h1{
+        display: flex;
+        text-align: center;
+        font-family: itc-benguiat, serif;
+        font-weight: 700;
+        font-style: normal;
+        text-transform: uppercase;
+        font-size: 100px;
+        height: 211px;
+        color: #C82121;
+}
+}
+@media (min-width:600px){
+    h1{
+        display: flex;
+        text-align: center;
+        font-family: itc-benguiat, serif;
+        font-weight: 700;
+        font-style: normal;
+        text-transform: uppercase;
+        font-size: 200px;
+        height: 211px;
+        color: #C82121;
+}
+}
+@media (min-width:900px){
+    h1{
+        display: flex;
+        text-align: center;
+        font-family: itc-benguiat, serif;
+        font-weight: 700;
+        font-style: normal;
+        text-transform: uppercase;
+        font-size: 320px;
+        height: 211px;
+        color: #C82121;
+}
 }
 h3{
     font-family: itc-benguiat-condensed, serif;
@@ -113,6 +155,11 @@ header a:hover{
     justify-content: center;
     align-items: center;
 }
+.toollogo{
+    display: grid;
+    grid-column-end: auto;
+}
+
 
 
 /*footer-----------------------------------*/
