--- a/hw18-css/works.css
+++ b/hw18-css/works.css
@@ -74,7 +74,7 @@ h3{
     font-style: italic;
     font-size: 48px;
     line-height: 283px;
-    color: #213130;
+    color: #BCB8B5;
 }
 p{
     font-family: Futura PT, serif;
