--- a/hw18-css/about.css
+++ b/hw18-css/about.css
@@ -56,6 +56,46 @@ p{
     font-size: 36px;
     line-height: 100%;
 }
+@media (min-width:576px){
+    h1{
+        display: flex;
+        text-align: center;
+        font-family: itc-benguiat, serif;
+        font-weight: 700;
+        font-style: normal;
+        text-transform: uppercase;
+        font-size: 100px;
+        height: 211px;
+        color: #C82121;
+}
+}
+@media (min-width:768px){
+    h1{
+        display: flex;
+        text-align: center;
+        font-family: itc-benguiat, serif;
+        font-weight: 700;
+        font-style: normal;
+        text-transform: uppercase;
+        font-size: 200px;
+        height: 211px;
+        color: #C82121;
+}
+}
+@media (min-width:992px){
+    h1{
+        display: flex;
+        text-align: center;
+        font-family: itc-benguiat, serif;
+        font-weight: 700;
+        font-style: normal;
+        text-transform: uppercase;
+        font-size: 320px;
+        height: 211px;
+        color: #C82121;
+}
+}
+
 
 /*header----------------------------------*/
 
@@ -127,8 +167,7 @@ header a:hover{
     display: grid;
     justify-content: center;
     align-items: center;
-    word-spacing: 1267px;
-    width: 1267px;
+    word-spacing: 100vw;
 }
 
 button{
