--- a/hw18-css/works.css
+++ b/hw18-css/works.css
@@ -29,7 +29,7 @@ h1{
     height: 211px;
     color: #C82121;
 }
-@media (min-width:320px){
+@media (min-width:576px){
     h1{
         display: flex;
         text-align: center;
@@ -42,7 +42,7 @@ h1{
         color: #C82121;
 }
 }
-@media (min-width:600px){
+@media (min-width:768px){
     h1{
         display: flex;
         text-align: center;
@@ -55,7 +55,7 @@ h1{
         color: #C82121;
 }
 }
-@media (min-width:900px){
+@media (min-width:992px){
     h1{
         display: flex;
         text-align: center;
@@ -68,6 +68,7 @@ h1{
         color: #C82121;
 }
 }
+
 h3{
     font-family: itc-benguiat-condensed, serif;
     font-weight: 700;
@@ -98,7 +99,7 @@ a{
 li{
     display: flex;
     justify-content: space-between;
-    vertical-align: top;
+    vertical-align: center;
 
     width: 23%;
     font-family: futura-pt, sans-serif;
@@ -111,7 +112,7 @@ li{
 
 nav{
     display: flex;
-    width: 73%;
+    width: 100%;
     padding: 1%;
     color: #213130;
 }
@@ -120,7 +121,9 @@ nav{
     list-style: none;
 }
 .nav-links li{
-    display: inline-block;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     padding: 0px 20px;
     color: #213130;
     
@@ -147,6 +150,33 @@ header a:hover{
     color: #C82121;
 }
 
+/*section----------------------------------*/
+.title-about{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    word-spacing: 1267px;
+    width: 1267px;
+}
+
+button{
+    display: flex;
+    justify-content: center;
+    color:white;
+    background-color: #213130;
+    font-family: Futura PT, serif;
+    font-size: 24px;
+}
+button:hover{
+    background-color:#C82121 ;
+}
+
+section {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+  }
+
 
 /*section----------------------------------*/
 
@@ -154,10 +184,41 @@ header a:hover{
     display: grid;
     justify-content: center;
     align-items: center;
+    word-spacing: 100vw;
 }
 .toollogo{
     display: grid;
     grid-column-end: auto;
+}
+
+/*card----------------------------------*/
+
+.flexContainer{
+    display: flex;
+}
+.card{
+    display: flex;
+    flex-direction: column;
+}
+
+.card-image{
+    width: 40%;
+}
+
+.card-body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #C82121 ;
+    width: 60%;
+    padding: 48px;
+}
+.card-body h3{
+    margin-top: 0;
+    margin-bottom: .125em;
+}
+.card-body p{
+    color: #BCB8B5;
 }
 
 
